--- a/src/app/astral-kit/playground/non-interactive.module.scss
+++ b/src/app/astral-kit/playground/non-interactive.module.scss
@@ -3,6 +3,7 @@
 
 .header {
   justify-self: end;
+  margin-block-end: t.$space-3;
 }
 
 .system {
